dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/case.c)
AM_INIT_AUTOMAKE(libstr, 0.1.0)
AM_CONFIG_HEADER(config.h)
AC_DEFINE(_GNU_SOURCE)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
